Improves question display readability
Enhances the visual presentation of questions by adding whitespace around the question text and explanation section. This improves readability and provides a better user experience.

--- a/src/app/question/question.html
+++ b/src/app/question/question.html
@@ -2,7 +2,11 @@
 <div class="p-4">
   <mat-card>
     <mat-card-header>
-      <mat-card-title><h3 class="text-lg mb-4">{{ questionNumber }}. {{ question.questionText }}</h3></mat-card-title>
+      <mat-card-title
+        ><h3 class="text-lg mb-4">
+          {{ questionNumber }}. {{ question.questionText }}
+        </h3></mat-card-title
+      >
     </mat-card-header>
     <mat-card-content>
       <mat-list role="list">
@@ -21,19 +25,27 @@
         </mat-list-item>
       </mat-list>
       @if (isAnswered) {
-      <div class="mt-4 p-4 bg-blue-100 border-l-4 border-blue-500 text-blue-700">
+      <div
+        class="mt-4 p-4 bg-blue-100 border-l-4 border-blue-500 text-blue-700"
+      >
         <p class="font-bold">Explanation</p>
-        <p class="italic text-sm mb-2 text-blue-600">Section: {{ question.section }}</p>
+        <p class="italic text-sm mb-2 text-blue-600">
+          Section: {{ question.section }}
+        </p>
         <p>{{ question.explanation }}</p>
       </div>
       }
     </mat-card-content>
     <mat-card-actions>
       <div class="flex-grow"></div>
-      <div class="flex items-center space-x-1"
-           matTooltip="The number of times you got this question correct or wrong. Two correct answers awards 'mastery'.">
+      <div
+        class="flex items-center space-x-1"
+        matTooltip="The number of times you got this question correct or wrong. Two correct answers awards 'mastery'."
+      >
         <ng-container *ngFor="let result of questionHistory">
-          <mat-icon [ngClass]="{'text-green-500': result, 'text-red-500': !result}">
+          <mat-icon
+            [ngClass]="{'text-green-500': result, 'text-red-500': !result}"
+          >
             {{ result ? 'check_circle' : 'cancel' }}
           </mat-icon>
         </ng-container>
