Adds margin to question history display
Improves the layout of the question history display by adding a right margin.

This change enhances the visual appeal and readability of the question interface, particularly for smaller screens.

--- a/src/app/question/question.html
+++ b/src/app/question/question.html
@@ -39,7 +39,7 @@
     <mat-card-actions>
       <div class="flex-grow"></div>
       <div
-        class="flex items-center space-x-1"
+        class="flex items-center space-x-1 mr-3"
         matTooltip="The number of times you got this question correct or wrong. Two correct answers awards 'mastery'."
       >
         <ng-container *ngFor="let result of questionHistory">
