--- a/src/app/quiz-mode-selection/quiz-mode-selection.html
+++ b/src/app/quiz-mode-selection/quiz-mode-selection.html
@@ -10,6 +10,9 @@
   <p class="text-lg">
     {{ masteredQuestions }} / {{ totalQuestions }} questions mastered
   </p>
+  <mat-checkbox [(ngModel)]="hideMastered" (change)="updateSections()" class="mt-2">
+    Hide mastered questions
+  </mat-checkbox>
 </div>
 <div class="my-4 text-center">
   <a
