--- a/src/app/quiz-runner/quiz-runner.html
+++ b/src/app/quiz-runner/quiz-runner.html
@@ -14,7 +14,7 @@
         Exit Quiz
       </button>
     </div>
-    <div *ngFor="let question of paginatedQuestions; let i = index">
+    <div *ngFor="let question of paginatedQuestions; let i = index" [id]="'question-' + question.id">
       <app-question
         [questionNumber]="currentPage * questionsPerPage + i + 1"
         [question]="question"
@@ -45,7 +45,7 @@
         mat-raised-button
         color="primary"
         (click)="submitQuiz()"
-        [disabled]="!isLastPage()"
+        *ngIf="isLastPage()"
       >
         Submit Quiz
       </button>
