--- a/src/app/quiz-mode-selection/quiz-mode-selection.scss
+++ b/src/app/quiz-mode-selection/quiz-mode-selection.scss
@@ -19,18 +19,16 @@
 }
 
 mat-list-item:hover {
-  background: rgba(0, 0, 0, 0.04);
+  background-color: rgba(var(--mat-sys-on-surface-rgb), 0.08);
 
-  mat-icon,
-  [matListItemTitle] {
-    color: var(--mat-primary-500, #3f51b5);
-    font-weight: bold;
-  }
+  // mat-icon,
+  // [matListItemTitle] {
+  //   color: var(--mat-sys-primary);
+  //   font-weight: bold;
+  // }
 }
 
-.header-primary {
-  color: var(--mat-primary-500, #3f51b5);
-}
+
 
 .topic-tiles-container {
   display: flex;
