--- a/src/app/quiz-mode-selection/quiz-mode-selection.scss
+++ b/src/app/quiz-mode-selection/quiz-mode-selection.scss
@@ -29,7 +29,7 @@ mat-list-item:hover {
 }
 
 .header-primary {
-  color: var(--mat-primary-500, #3f51b5);
+  color: var(--mat-sys-on-primary-container);
 }
 
 .topic-tiles-container {
