--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,8 @@
 html,
 body {
   height: 100%;
+  background: var(--mat-sys-surface);
+  color: var(--mat-sys-on-surface);
 }
 body {
   margin: 0;
@@ -22,9 +24,9 @@ body {
 }
 
 // Dark mode specific styles
-@media (prefers-color-scheme: dark) {
-  body {
-    color: white;
-    background-color: #303030;
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   body {
+//     color: white;
+//     background-color: #303030;
+//   }
+// }
