--- a/src/app/quiz-mode-selection/quiz-mode-selection.html
+++ b/src/app/quiz-mode-selection/quiz-mode-selection.html
@@ -1,4 +1,6 @@
 <div class="text-center my-6">
+  <hr class="my-4 border-gray-300 dark:border-gray-600" />
+
   <h3
     class="text-xl font-bold header-primary flex items-center justify-center"
     color="primary"
@@ -34,7 +36,8 @@
     Open Study Guide
   </a>
 </div>
-<div class="text-center my-6">
+<hr class="my-4 border-gray-300 dark:border-gray-600" />
+<div class="text-center pt-2 pb-6">
   <h2 class="text-2xl font-bold header-primary">Choose Your Challenge</h2>
 </div>
 <div class="topic-tiles-container">
@@ -51,7 +54,8 @@
   </mat-card>
 </div>
 
-<div class="text-center my-6">
+<hr class="my-4 border-gray-300 dark:border-gray-600" />
+<div class="text-center pt-2 pb-6">
   <h3
     class="text-2xl font-bold header-primary flex items-center justify-center"
   >
@@ -75,3 +79,4 @@
     </mat-card-content>
   </mat-card>
 </div>
+<hr class="my-4 border-gray-300 dark:border-gray-600" />
