--- a/src/app/results/results.html
+++ b/src/app/results/results.html
@@ -1,12 +1,12 @@
-<div class="text-center p-8">
+<div class="text-center p-4 sm:p-6">
   <mat-card>
     <mat-card-header>
       <mat-card-title class="text-2xl font-bold">Quiz Complete!</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <p class="text-lg mt-4">You scored {{ score }} out of {{ totalQuestions }}</p>
+      <p class="text-lg my-6">You scored {{ score }} out of {{ totalQuestions }}</p>
 
-      <div *ngIf="missedAreas && missedAreas.length > 0" class="mt-8">
+      <div *ngIf="missedAreas && missedAreas.length > 0" class="mt-6">
         <div class="flex justify-between items-center mb-4">
           <h3 class="text-xl font-semibold">Areas to Study</h3>
           <a mat-button href="https://airuniversity-my.sharepoint.com/:w:/g/personal/yura_sim_ots_au_af_edu/EXCrskQrpgZNifzONssaCXEBHr6Irqi_vHpz1C9pto_nog?e=iVhnOk" target="_blank" rel="noopener noreferrer">
@@ -35,7 +35,7 @@
 
     </mat-card-content>
     <mat-card-actions class="flex justify-center">
-      <button mat-raised-button color="primary" (click)="onRestart()" class="my-4">
+      <button mat-raised-button color="primary" (click)="onRestart()" class="my-6">
         Restart Quiz
       </button>
     </mat-card-actions>
