--- a/src/app/quiz-runner/quiz-runner.html
+++ b/src/app/quiz-runner/quiz-runner.html
@@ -58,6 +58,7 @@
       [score]="score"
       [totalQuestions]="totalQuestions"
       [missedAreas]="missedAreas"
+      [missedQuestions]="missedQuestions"
       (restart)="exitQuiz()"
     ></app-results>
   </div>
