Improves OPSEC questions and UI
Updates question data to use abbreviated OPSEC section names.

Adds styling for review mode to highlight correct and incorrect answers.

--- a/src/app/question/question.scss
+++ b/src/app/question/question.scss
@@ -16,6 +16,18 @@
     color: white;
   }
 
+  &.review-mode {
+    cursor: default;
+
+    &.correct-answer {
+      opacity: 1;
+    }
+
+    &.incorrect-answer {
+      opacity: 1;
+    }
+  }
+
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
   display: flex;
